cambios de la administración y la seguridad de la app

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,6 +16,192 @@ header{
 	background-size:  cover;
 	background-color: #999;
 }
+.top-menu{
+	text-align: right;
+	padding: 0.5em 1em;
+}
+.top-menu button{
+	-moz-box-shadow: 0px 1px 14px -7px #3e7327;
+	-webkit-box-shadow: 0px 1px 14px -7px #3e7327;
+	box-shadow: 0px 1px 14px -7px #3e7327;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
+	background:-moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:-webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
+	background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
+	background-color:#77b55a;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:11px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+}
+.top-menu button:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
+	background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
+	background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+	background-color:#72b352;
+}
+.top-menu button:active {
+	position:relative;
+	top:1px;
+}
+/* -------------------------------------------------- */
+/*                        POPUP                       */
+/* -------------------------------------------------- */
+.overlay{
+	background: rgba(0,0,0,.3);
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	visibility: hidden;
+}
+.active{
+	visibility: visible;
+}
+.popup{
+	background: #f8f8f8;
+	box-shadow: 0px 0px 5px 0px rgba(0,0,0,.8);
+	border-radius: 3px;
+	font-family: sans-serif;
+	padding: 20px;
+	text-align: center;
+	width: 600px;
+	transition: .3s ease all;
+	transform: scale(0.7);
+	opacity: 0;
+
+}
+.popup .btn-cerrar-popup{
+	font-size: 16px;
+	line-height: 16px;
+	display: block;
+	text-align: right;
+	color: #bbb;
+	transition: .3s ease all;
+}
+.popup .btn-cerrar-popup:hover{
+	color: #000;
+}
+.popup h3{
+	font-size: 36px;
+	font-weight: bold;
+	margin-bottom: 10px;
+	opacity: 0;
+}
+.popup h4{
+	font-size: 26px;
+	font-weight: bold;
+	margin-bottom: 40px;
+	color: #777;
+	opacity: 0;
+}
+
+.popup form .contenedor-inputs, .popup form .btn-submit{
+	opacity: 0;
+}
+.popup form .contenedor-inputs input{
+	width: 100%;
+	margin-bottom: 20px;
+	height: 52px;
+	line-height: 52px;
+	font-size: 18px;
+	text-align: center;
+	border:1px solid #bbb;
+}
+.popup form .btn-submit{
+	padding: 0 20px;
+	height: 40px;
+	line-height: 40px;
+	border:none;
+	color: #fff;
+	background: #5e7de3;
+	border-radius: 3px;
+	font-size: 16px;
+	cursor: pointer;
+	transition: .3s ease all;
+}
+.popup form .btn-submit:hover{
+	background: rgba(94,125,227,.8);
+}
+/* -------------------------------------------------- */
+/*                        ANIME                       */
+/* -------------------------------------------------- */
+.popup.active{
+	opacity: 1;
+	transform: scale(1);
+}
+.popup.active h3{
+	animation: entradatitulo .8s ease .2s forwards;
+}
+.popup.active h4{
+	animation: entradasubtitulo .8s ease .2s forwards;
+}
+.popup.active .contenedor-inputs{
+	animation: entradainputs .8s ease .6s forwards;
+}
+.popup.active .btn-submit{
+	animation: btnlogin .8s ease .6s forwards;
+}
+@keyframes entradatitulo{
+	from{
+		transform: translateY(-25px);
+		opacity: 0;
+	}
+	to{
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+@keyframes entradasubtitulo{
+	from{
+		transform: translateY(25px);
+		opacity: 0;
+	}
+	to{
+		transform: translateY(0);
+		opacity: 1;
+	}
+}
+@keyframes entradainputs{
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
+}
+@keyframes btnlogin{
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
+}
+
+/* -------------------------------------------------- */
+/*                        END ANIME                   */
+/* -------------------------------------------------- */
+
 header h1{
 	font-family: 'Josefin Slab';
 	color: #f2f2f2;
