--- a/administrator/adm_birds/adm_birds_css/estilos1.css
+++ b/administrator/adm_birds/adm_birds_css/estilos1.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Handlee');
 @import url('https://fonts.googleapis.com/css?family=Handlee|Varela');
 
 * {
@@ -10,20 +9,18 @@ a {
     text-decoration: none;
 }
 
-.ingresar a,
-.mod a,
-.eli a {
+.ingresar a{
     color: white;
     font-family: 'Varela', sans-serif;
 }
 
 .birds_principal {
-    height: 540px;
-    background: url(../adm_birds_img/5244.png);
+    height: 10%;
+    background: url(../adm_birds_img/adm_birds_fondo.jpg);
     background-position: center center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
     background-size: cover;
+    padding-bottom: 10%;
 
 }
 
@@ -36,69 +33,26 @@ a {
     width: 42%;
     margin-left: 28.5%;
     margin-top: 0%;
-    padding-top: 10px;
+    padding-top: 2%;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
-}
-
-.botones_home {
-    background: white;
-    height: 54%;
-    width: 25%;
-    padding: 2%;
-    margin-left: 35%;
-    margin-top: 1.5%;
-    z-index: 0;
-    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
-}
-
-.ingresar,
-.mod,
-.eli {
-    width: 23%;
-    height: 10%;
-    left: 37%;
-    font-size: 30px;
-    padding: .375rem .75rem;
-    border-radius: .25rem;
-    position: fixed;
-}
-
-
-.ingresar,
-.mod,
-.eli:hover {
-    cursor: pointer;
 }
 
 .ingresar {
     background: #4CAF50;
-    top: 39%;
-    padding-top: 2%;
+    padding: 10px;
+    border-radius: 3px;
+    width: 10%;
+    margin-left: 7%;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3);
+    position: absolute;
+    margin-top: 4%;
 }
 
 .ingresar:hover {
     background: #388E3C;
+    cursor: pointer;
 }
 
-.mod {
-    background: #FFC107;
-    top: 55%;
-    padding-top: 2%;
-}
-
-.mod:hover {
-    background: #FFA000;
-}
-
-.eli {
-    background: #F44336;
-    top: 70%;
-    padding-top: 2%;
-}
-
-.eli:hover {
-    background: #D32F2F;
-}
 
 /* --------------------------- SELECT UPDATE --------------------------- */
 
@@ -123,12 +77,9 @@ a {
     background: #DAD8D8;
     margin-top: 10%;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.5);
+    margin-bottom: 50px;
 }
 
-.t1 {
-    color: red;
-    background: red;
-}
 
 .contenido_mod1 {
     padding: 1em;
@@ -149,6 +100,7 @@ a {
 .table_birds tr:nth-child(even) {
     background-color: #f2f2f2;
 }
+
 /*
 .table_birds tr:hover {
     background-color: rgba(0, 0, 0, 0.3);
@@ -163,6 +115,7 @@ a {
     text-transform: uppercase;
 }
 
+.table_birds tr .btn_ver a,
 .table_birds tr .btn_editar a,
 .table_birds tr .btn_eliminar a {
     text-decoration: none;
@@ -170,24 +123,101 @@ a {
     color: white;
     font-style: normal;
 }
-.icon-mod, .icon-eli{
+
+.icon-ver,
+.icon-mod,
+.icon-eli {
     font-style: normal;
+}
+
+.table_birds tr .btn_ver {
+    position: relative;
+    background: #00BCD4;
+    padding: 1px;
+    border-radius: 3px;
+    width: 100%;
+}
+
+.table_birds tr .btn_ver:hover {
+    background: #0097A7;
+    cursor: pointer;
 }
 
 .table_birds tr .btn_editar {
     position: relative;
-    background: #4CAF50;
-    padding: 10px;
+    background: #FFC107;
+    padding: 1px;
     border-radius: 3px;
-    width: 60%;
-    margin-left: 15%;
+    margin-top: 3px;
+    width: 100%;
+}
+
+.table_birds tr .btn_editar:hover {
+    background: #FFA000;
+    cursor: pointer;
 }
 
 .table_birds tr .btn_eliminar {
     background: #F44336;
-    padding: 10px;
+    padding: 1px;
     border-radius: 3px;
-    margin-top: 5px;
-    width: 60%;
-    margin-left: 15%;
+    margin-top: 3px;
+    width: 100%;
 }
+
+.table_birds tr .btn_eliminar:hover {
+    background: #D32F2F;
+    cursor: pointer;
+}
+
+/* ------------------------------- READ ------------------------------- */
+
+.titulo_read {
+    font-family: 'Handlee', cursive;
+    background: #2c2c26;
+    font-size: 40px;
+    color: white;
+    height: 10%;
+    width: 45%;
+    margin-left: 30%;
+    margin-top: 2%;
+    padding-top: 1%;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    position: absolute;
+}
+
+.nombre_read,
+.nombrec_read,
+.desc_read,
+.habitat_read {
+    font-family: 'Handlee', cursive;
+    border-bottom: #03A9F4 1px solid;
+    width: 20%;
+    margin-left: 40%;
+    margin-bottom: 1%;
+    margin-top: 1%;
+    text-align: center;
+    text-align: justify;
+}
+
+.cont_read,
+.cont_desc_read {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    width: 58%;
+    margin-left: 40%;
+    text-align: justify;
+
+}
+
+.cont_desc_read {
+    text-align: justify;
+}
+
+.img_read {
+    position: fixed;
+    left: 6%;
+    margin-top: 3%;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    
+}
+
