--- a/administrator/adm_birds/adm_birds_css/fontello.css
+++ b/administrator/adm_birds/adm_birds_css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?48033272');
-  src: url('../font/fontello.eot?48033272#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?48033272') format('woff2'),
-       url('../font/fontello.woff?48033272') format('woff'),
-       url('../font/fontello.ttf?48033272') format('truetype'),
-       url('../font/fontello.svg?48033272#fontello') format('svg');
+  src: url('../font/fontello.eot?17712479');
+  src: url('../font/fontello.eot?17712479#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?17712479') format('woff2'),
+       url('../font/fontello.woff?17712479') format('woff'),
+       url('../font/fontello.ttf?17712479') format('truetype'),
+       url('../font/fontello.svg?17712479#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?48033272#fontello') format('svg');
+    src: url('../font/fontello.svg?17712479#fontello') format('svg');
   }
 }
 */
@@ -57,4 +57,5 @@
  
 .icon-mod:before { content: '\e800'; } /* '' */
 .icon-eli:before { content: '\e801'; } /* '' */
-.icon-insertar:before { content: '\e802'; } /* '' */
+.icon-ver:before { content: '\e802'; } /* '' */
+.icon-insertar:before { content: '\e803'; } /* '' */
