--- a/administrator/adm_birds/adm_birds_css/insert.css
+++ b/administrator/adm_birds/adm_birds_css/insert.css
@@ -1,10 +1,34 @@
-html {
-    background-color: #2c3e50;
-}
+@import url('https://fonts.googleapis.com/css?family=Handlee|Varela');
 
 main {
-    background-color: #2c3e50;
-    font-family: 'Baloo Bhai', cursive;
+    background: url(../adm_birds_img/adm_birds_fondo.jpg);
+    width: 100%;
+    height: 150%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    margin: -3% 0% 0% 0%;
+    font-family: 'Handlee', cursive;
+}
+
+.titulo_insert{
+    font-family: 'Handlee', cursive;
+    background: #2c2c26;
+    font-size: 40px;
+    color: white;
+    height: 10%;
+    width: 45%;
+    margin-left: 28%;
+    margin-top: 2%;
+    padding-top: 1%;
+    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    position: absolute;
+}
+
+
+.form {
+    top: 18%;
 }
 
 .form_item {
@@ -16,7 +40,6 @@ main {
 .form_input,
 .form_select,
 .form_textarea {
-    font-family: 'Baloo Bhai', cursive;
     border: 0;
     outline: 0;
     width: 100%;
@@ -25,16 +48,17 @@ main {
     background: transparent;
     border-bottom: 1px solid #d2d2d2;
     border-radius: 0;
-}
-
-.form_input::placeholder,
-.form_textarea::placeholder {
-    opacity: 0;
+    font-family: 'Nunito', sans-serif;
 }
 
 button,
 .form_select {
     cursor: pointer;
+}
+
+.form_label {
+    font-family: 'Handlee', cursive;
+    color: black;
 }
 
 .form_label,
@@ -44,38 +68,38 @@ button,
     display: block;
     -webkit-transition: 0.2s;
     transition: 0.2s;
-    font-size: 0.8rem;
-    color: #9b9b9b;
+    color: black;
+    
 }
 
 .submit {
-    font-family: 'Baloo Bhai', cursive;
+    font-family: 'Handlee', cursive;
     margin-top: 20px;
     text-align: center;
     padding: 15px 20px;
-    background-color: #2c3e50;
+    background-color: #00BCD4;
     border: 0;
     color: white;
+    font-weight: bold;
 }
 
 .submit:hover {
-    background-color: #3498db;
+    background-color: #0097A7;
     box-shadow: 0px 0px 2px 0px;
-    color: #000;
+    
 }
 
 body {
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: #2c3e50;
 }
 
 .form {
-    left: 25%;
-    width: 50%;
+    left: 17%;
+    width: 60%;
     padding: 40px;
-    margin-top: 40px;
+    margin-top: 50px;
     position: relative;
     margin-bottom: 40px;
     border-radius: 4px;
@@ -86,12 +110,7 @@ body {
 
 .title {
     color: #000;
-    font-weight: bold;
     margin-top: -10px;
     text-align: center;
     padding-bottom: -10px;
-}
-
-#file {
-    font-family: 'Baloo Bhai', cursive;
 }
